doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,7 +13,7 @@
 Текущая версия 33a17
 --------------------
 
-[$] Альянсы:  Альянсы  теперь  могут  рекуртировать  Наемников  и  исследовать
+[$] Альянсы:  Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
     1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтрий/ТМ
     2. Член Альянса может перевести ресурсы на счет Альянса. Сделать это  можно
@@ -22,9 +22,9 @@
        ниже)
     3. Ресурсы со счета Альянса могут расходоваться только  на  нужды  Альянса.
        Вывод ресурсов со счета Альянса невозможен
-    4. Владелец  Альянса  с  его  счета  может  исследовать  технологии    и  Рекрутировать
-       Наемников -  соответственно  пункты  "Технологии  Альянса"  и  "Наемники
-       Альянса" на странице управления Альянсом
+    4. Владелец  Альянса  с  его  счета   может   исследовать   технологии   и
+       рекрутировать Наемников - соответственно пункты "Технологии  Альянса"  и
+       "Наемники Альянса" на странице управления
     5. После достижения минимально необходимого размера Альянса (по умолчанию -
        10 человек, задается в  таблице  `config`  записью  'ali_members_bonus')
        каждый член Альянса получает бонус к своим Наемникам и технологиям
@@ -44,6 +44,8 @@
        исследованию Ионной  технологии  (требуется  ЛТ  5-го  уровня)  и  может
        строить Тяжелый Лазер (требуется ЛТ 6-го уровня). Очевидно, если  бы  он
        не находился в Альянсе, эти постройки были бы заблокированы
+    8. При исследовании технологии уровень лаборатории равен количеству игроков
+       в Альянсе на момент начала исследования
     Выбранная механика бонусов  Альянса  призван  обеспечить  достижение  сразу
     нескольких целей:
     1. Исключить злоупотребление фишкой,  когда  2-3  игрока  формируют  Альянс
