feat-ALI-33a18-ali_player: To topnav added alliance resources list and bonus status - active or not

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@
  [$] Модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a17
+Текущая версия 33a18
 --------------------
 
 [$] Альянсы:  Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
@@ -179,6 +179,7 @@
 [+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
     технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
     требования итд)
+[+] Альянсы: В топбар добавлено отображение ресурсов Альянса
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
