misc-ECO-33a18.1: Reward in metall/crystall/deuterium for research quests now placed to player's main planet

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -154,6 +154,8 @@
     2.  В  случае  отсутствия  МИС  для  проведения   исследования   выбирается
        лаборатория  с  максимальным  эффективным   уровнем   (т.е.   с   учетом
        нанолабораторий)
+    Награда за квесты на исследование теперь  всегда  начисляется  на  основную
+    планету игрока
     При апдейте все идущие исследования  будут  перенесены  в  пользовательскую
     очередь
 
