doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,16 +4,15 @@
  [+] Добавлено
  [-] Убрано
  [~] Изменено
- [#] Интерфейсные усовершенствования
  [%] Исправление - багфикс
  [@] Эта информация будет интересна только админам и/или разработчикам
- [$] Модуль, не входящий в публичную версию
+ [#] Модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
 Текущая версия 33a18
 --------------------
 
-[$] Альянсы:  Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
+[#] Альянсы:  Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
     1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтрий/ТМ
     2. Член Альянса может перевести ресурсы на счет Альянса. Сделать это  можно
@@ -282,7 +281,7 @@ Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
     блокировать игроков. Сохраняется статистика за 10 дней
 [~] Рекорды: Переписана страница рекордов
 
-[#] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
+[~] Постройки: Ссылки на создание и  уничтожение  юнитов  раскрашены  в  цвета,
     согласно  CSS  (по  умолчанию:  зеленый  для  создания,   красный   -   для
     уничтожения)
 
@@ -741,9 +740,9 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
     разрешении удержания на слабом соаловце
 [~] Шпионаж: Изменены сообщения при уничтожении разведфлота
 
-[#] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
+[~] Навбар: Клик на индикаторе сообщений Администрации, Альянса или от  другого
     игрока сразу открывает просмотр соответствующих сообщений
-[#] Вселенная:  Во  всплывающем  меню  на  поле  обломков  добавлена  индикация
+[~] Вселенная:  Во  всплывающем  меню  на  поле  обломков  добавлена  индикация
     количества летящих переработчиков игрока
 
 [%] Альянсы: Исправлена ошибка невозможности выхода из Альянса
@@ -1060,11 +1059,11 @@ Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
     пароля, ссылку на FAQ, ссылку на новости сервера  (к  ним  теперь  разрешен
     доступ незалогиненных/забаненных пользователей).
 
-[#] Интерфейс: Теперь если в настройках сервера отсутсвует какой  либо  из  URL
+[~] Интерфейс: Теперь если в настройках сервера отсутсвует какой  либо  из  URL
     (адрес форума, ссылка на правила, ссылка на FAQ), то соответствующие пункты
     меню и ссылки скрываются или не подсвечиваются. В дампе БД по умолчанию все
     URL идут пустыми
-[#] Интерфейс: Переработана страница ТМ. Теперь если в конфигурации отсутствует
+[~] Интерфейс: Переработана страница ТМ. Теперь если в конфигурации отсутствует
     URL с подробностями покупки ТМ - информация о возможности покупки просто не
     выводится
 
@@ -1150,28 +1149,28 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 [~] Настройки: При попытке уйти в отпуск теперь  выдается  отдельное  сообщение
     при летящих флотах и отдельное сообщение при постройке на планетах
 
-[#] Черный Рынок: Торговец ресурсами - Добавлена защита от повторного обмена
-[#] Сообщения: В навбаре теперь дополнительно отображаются количество сообщений
+[~] Черный Рынок: Торговец ресурсами - Добавлена защита от повторного обмена
+[~] Сообщения: В навбаре теперь дополнительно отображаются количество сообщений
     от других игроков  и  количество  сообщений  от  членов  альянса.  Цветовое
     кодирование зависит от скина и такое же, как на странице сообщений
-[#] Навбар: Стартовое  время  и  количество  ресурсов  теперь  прописывается  в
+[~] Навбар: Стартовое  время  и  количество  ресурсов  теперь  прописывается  в
     темплейте. На медленных соединениях до конца загрузки  страницы  в  навбаре
     будут не заглушки, а значения, акутуальные на момент запроса
-[#] Император: Все числа теперь показываются с разделителем тысяч
-[#] Настройки  пользователя:  Ко  всем  чекбоксам  добавлены  label   for   на
+[~] Император: Все числа теперь показываются с разделителем тысяч
+[~] Настройки  пользователя:  Ко  всем  чекбоксам  добавлены  label   for   на
     соответствующие  надписи.  Теперь  можно  кликать  на   надпись,   что   бы
     переключить чекбокс
-[#] Здания: По окончании очереди построек страница автоматически обновляется
-[#] Верфь: Теперь при отмене очереди открывается та же страница верфи (флот или
+[~] Здания: По окончании очереди построек страница автоматически обновляется
+[~] Верфь: Теперь при отмене очереди открывается та же страница верфи (флот или
     оборона)
-[#] Обзор планеты: При выборе луны в списке колоний её иконка увеличивается  на
+[~] Обзор планеты: При выборе луны в списке колоний её иконка увеличивается  на
     50%. Изображение планеты,  которой  принадлежит  луна,  так  же  остается
     увеличенным
-[#] Обзор планеты/Обзор Империи: На превьюшку колонии добавлена иконка тележки.
+[~] Обзор планеты/Обзор Империи: На превьюшку колонии добавлена иконка тележки.
     Щелчок на неё открывает интерфейс своза  ресурсов  на  данную  планету/луну
-[#] Обзор планеты/Обзор Империи: В списке планет полоса  застроенности  планеты
+[~] Обзор планеты/Обзор Империи: В списке планет полоса  застроенности  планеты
     перенесена под картинку
-[#] Обзор планеты: Иконка вражеской атаки на превьюшке луны составляет 70%  для
+[~] Обзор планеты: Иконка вражеской атаки на превьюшке луны составляет 70%  для
     лучшей различимости при невыбранной луне
 
 [%] Настройки: Исправлена ошибка с невозможностью ухода в отпуск
@@ -1263,7 +1262,7 @@ Project "SuperNova.WS" Release 25 (2011-01-20 12:24)
     работал
 
 2011-01-18 18:12
-[#] Кнопка "Свезти ресурсы" перенесена под расписание движения флотов
+[~] Кнопка "Свезти ресурсы" перенесена под расписание движения флотов
 [~] Исправлена ошибка неотображения планеты в списке на  вывоз  ресурсов,  если
     колония только одна
 
@@ -1333,7 +1332,7 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
 [+] Симулятор: Добавлена поддержка Адмирала
 
 2011-01-14 15:02
-[#] Обзор Империи: Уровни сносимых зданий выделяются в списке  уровней  красным
+[~] Обзор Империи: Уровни сносимых зданий выделяются в списке  уровней  красным
     цветом
 
 2011-01-14 14:49
@@ -1342,12 +1341,12 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
     время исследования"
 
 2011-01-14 14:23
-[#] Постройка/Здания: Модифицирован код темплейта для совместимости с Хромом
+[~] Постройка/Здания: Модифицирован код темплейта для совместимости с Хромом
 
 2011-01-14 13:55
-[#] Вселенная: Добавлен статус для игрока "Начинаюшщий игрок" в зоне абсолютной
+[~] Вселенная: Добавлен статус для игрока "Начинаюшщий игрок" в зоне абсолютной
     нубзащиты (по умолчанию меньше 5000 очков)
-[#] Вселенная: Статус активности игрока теперь выделяется стилем текста: жирный
+[~] Вселенная: Статус активности игрока теперь выделяется стилем текста: жирный
     - активный игрок, обычный - игрок неактивный больше  7  дней,  наклонный  -
     игрок неактивный больше 28 дней
 
@@ -1358,7 +1357,7 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
 [%] Обзор планету/Управления: Исправлена ссылка "Вернуться к обзору"
 
 2011-01-14 09:18
-[#] Очередь построек:  Перенесена  номер  строящегося  уровеня  с  середины  на
+[~] Очередь построек:  Перенесена  номер  строящегося  уровеня  с  середины  на
     верхнюю границу иконки
 
 2011-01-14 09:08
@@ -1377,7 +1376,7 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
     очереди
 
 2011-01-13 19:31
-[#] Мировые константы: Добавлено слово "Скорость"  к  соответствующим  пунктам.
+[~] Мировые константы: Добавлено слово "Скорость"  к  соответствующим  пунктам.
     Добавлен пробел между "Базовая добыча" и названием ресурса
 
 2011-01-13 19:09
@@ -1419,7 +1418,7 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
 [%] Информация: Исправлена опечатка RR "Планетарный защита"
 
 2011-01-11 23:06
-[#] Империя: Изменено форматирование по желанию пользователей
+[~] Империя: Изменено форматирование по желанию пользователей
 
 2011-01-11 22:35
 [%] Империя: Исправлена ошибка форматирования количества прилетающих кораблей
@@ -1456,7 +1455,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     сбрасывать пароль через страницу "Забытого пароля" заблокирована
 
 2011-01-10 03:58
-[#] Империя: Переработано форматирование названия строящегося  здания,  что  бы
+[~] Империя: Переработано форматирование названия строящегося  здания,  что  бы
     таблицу сильно не распирало
 
 2011-01-10 02:39 Project "SuperNova.WS" (Release 24)
@@ -1543,7 +1542,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [@] Обновлен Sypex Dumper до версии 2.0.8 Release
 
 2010-12-28 03:58 ПкВН-6, УС-3 (нет, это не новый фильм Михалкова)
-[#] Переверстан блок информации о здании на странице зданий
+[~] Переверстан блок информации о здании на странице зданий
 [~] Теперь корректно вычисляется количество свободных  секторов  на  планете  с
     учетом событий в очереди зданий (постройка или уничтожение)
 
@@ -1565,7 +1564,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [@] Переименованы процедуры, относящиеся к начислению ТМ
 
 2010-12-03 12:51
-[#] Верхняя панель: Убраны названия ресурсов  -  они  всплывают  при  наведении
+[~] Верхняя панель: Убраны названия ресурсов  -  они  всплывают  при  наведении
     мышкой на иконки. Это уменьшило высоту верхней панели на две строки
 [%] Интерфейс/Строительство: Исправлено пропадание кнопки  "Удалить  здание"  с
     превьюшек
@@ -1575,8 +1574,8 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 
 2010-12-02 15:28 Подготовка к введению наемников-3
 [!] Добавлена подсистема губернаторов. Пока функционирует не полностью
-[#] Обзор планеты: Добавилось отображение текущего губернатора
-[#] Обзор планеты/Управление: Переверстана. Добавился список губернаторов
+[~] Обзор планеты: Добавилось отображение текущего губернатора
+[~] Обзор планеты/Управление: Переверстана. Добавился список губернаторов
 [@] Описание  юнитов  теперь  хранится  в  файле  languages/*/infos.mo,  а  не
     разбросано по файлам fleet.mo и tech.mo
 [@] mrc_modify_value теперь принимает в качестве параметра и планету. Это нужно
@@ -1588,7 +1587,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     превьюшек при полной застройке планеты
 
 2010-12-01 15:57 Подготовка к введению наемников (временных офицеров)
-[#] Офицеры переименованы в соответствии с будущими функциями
+[~] Офицеры переименованы в соответствии с будущими функциями
 [@] Все текущие офицеры отвязаны от цифровых идентификаторов и  названий  полей
 [@] Идентификаторы офицеров задаются в includes/constants.php
 [@] Поля в БД определяются по константам и задаются в файле includes/vars.php
@@ -1611,7 +1610,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [%] Исправлена уязвимость к SQL-injection в модуле редактирования закладок
 
 2010-11-02 00:58
-[#] Офицеры: Переработана страница офицеров
+[~] Офицеры: Переработана страница офицеров
 [~] Офицеры: Изменены названия и описания некоторых офицеров
 [@] Изображения офицеров теперь хранятся в скинах
 [@] Страница офицеров теперь использует PTE
@@ -1638,24 +1637,24 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     Альянс кандидату показывалась стандартная заглушка
 
 2010-10-30 21:36
-[#] Торговец ресурсами: Теперь  при  смене  типа  ресурсов,  на  которые  будет
+[~] Торговец ресурсами: Теперь  при  смене  типа  ресурсов,  на  которые  будет
     произведен обмен, все ячейки ресурсов обнуляются
 
 2010-10-30 21:31
-[#] Верхняя панель: Количество ресурсов и склад теперь окрашиваются  в  красный
+[~] Верхняя панель: Количество ресурсов и склад теперь окрашиваются  в  красный
     цвет когда количество ресурсов больше или равно емкости склада (а не просто
     больше, как раньше)
 
 2010-10-30 21:16
 [%] Обзор планет: Исправлена ошибка  индикации  отосланных  переработчиков  при
     использовании ссылки "Переработать"
-[#] Изменен CSS для страницы входа и регистрации при использовании PDA
+[~] Изменен CSS для страницы входа и регистрации при использовании PDA
 
 2010-10-30 12:13
 [@] Переработана админская страница компенсации планет
 
 2010-10-28 01:36
-[#] Немного изменен внешний вид пользовательских настроек
+[~] Немного изменен внешний вид пользовательских настроек
 
 2010-10-27 18:46
 [%] Регистрация: Исправлена ошибка регистрации с несозданием главной планеты
@@ -1734,8 +1733,8 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 2010-10-24 19:57
 [~] Ракетная шахта  теперь  требует  для  сторительства  технологию  импульсных
     двигателей 1го уровня
-[#] Вселенная: Ракеты теперь отправляются через JS без обновления страницы
-[#] Вселенная: Переработана легенда
+[~] Вселенная: Ракеты теперь отправляются через JS без обновления страницы
+[~] Вселенная: Переработана легенда
 [@] Полностью переписан код проверки возможности отправки флота с  определенной
     миссией
 
@@ -1867,21 +1866,21 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [%] Вселенная: Исправлена ошибка отображения планетарного флота на луне
 
 2010-10-18 09:12
-[#] Обзор планеты: Теперь на иконке своего флота на картинке планеты появляется
+[~] Обзор планеты: Теперь на иконке своего флота на картинке планеты появляется
     попап с составом флота, прибывающего на планету
-[#] Империя: Теперь на иконке своего флота на картинке планеты появляется попап
+[~] Империя: Теперь на иконке своего флота на картинке планеты появляется попап
     с составом флота, прибывающего на планету
 
 2010-10-18 05:21
-[#] Вселенная: Теперь иконка и состав флотов показывается и на чужих планетах
+[~] Вселенная: Теперь иконка и состав флотов показывается и на чужих планетах
 
 2010-10-18 04:37
-[#] Вселенная: на  иконках  своих  планет  отображается  индикатор  прилетающих
+[~] Вселенная: на  иконках  своих  планет  отображается  индикатор  прилетающих
     флотов.  В  попапе  приводятся  подробные  сведения  о   сумарном   составе
     прибывающих кораблей и ресурсов у них на борту
 
 2010-10-18 01:28
-[#] Вселенная:  на  иконке  обломков  отображается  количество  переработчиков
+[~] Вселенная:  на  иконке  обломков  отображается  количество  переработчиков
     пользователя, летящих на эти обломки
 
 2010-10-17 19:55
@@ -1901,7 +1900,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 
 2010-10-16 18:35
 [%] Исправлен неправильный формат времени - 12 часовый вместо 24
-[#] Заменены везде даты и время константами
+[~] Заменены везде даты и время константами
 
 2010-10-16 15:05
 [%] Исправлен баг, позволявший отправлять флоты со шпионами в экспедиции
@@ -1940,19 +1939,19 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     через пробел двух вышеприведенных констант
 
 2010-10-15 04:02
-[#] Симулятор: Симулятор опять при пустых  технологиях  атакующего  подставляет
+[~] Симулятор: Симулятор опять при пустых  технологиях  атакующего  подставляет
     значения технологий текущего пользователя
 
 2010-10-15 03:47
-[#] Вселенная: На обломках показывается также общее количество ресурсов
+[~] Вселенная: На обломках показывается также общее количество ресурсов
 
 2010-10-15 03:02
-[#] Флот/Страница0: Добавлено цветовое кодирование  в  список  флотов.
-[#] Флот/Страница0: Теперь можно кликать на координатах планет в списке  флотов
+[~] Флот/Страница0: Добавлено цветовое кодирование  в  список  флотов.
+[~] Флот/Страница0: Теперь можно кликать на координатах планет в списке  флотов
     - откроется Вселенная в указанной галактике и системе
 
 2010-10-15 01:56
-[#] Флот/Страница0: Клик на названии корабля перебросит на подробное описание
+[~] Флот/Страница0: Клик на названии корабля перебросит на подробное описание
 
 2010-10-15 01:12
 [@] Новости: Добавлена дополнительная строка,  в  которую  можно  вбить  URL  с
@@ -1960,21 +1959,21 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     слова "Подробнее..."
 
 2010-10-15 00:06
-[#] Обзор Планеты: В графике полета флотов изменено  цветовое  кодирование  для
+[~] Обзор Планеты: В графике полета флотов изменено  цветовое  кодирование  для
     своих флотов
 
 2010-10-14 19:32
-[#] Изменена картинка для линейного крейсера на более подходящую по гамме
+[~] Изменена картинка для линейного крейсера на более подходящую по гамме
 [@] Страницы логина и регистрации теперь подгружают свой собственный CSS, а  не
     используют global.css для хранения стилей
 [@] Почищены лишние стили в CSS-файлов встроенных скинов
 
 2010-10-14 16:32
-[#] Строительство/Здания: Количество ресурсов в табличке  ресурсов  в  описании
+[~] Строительство/Здания: Количество ресурсов в табличке  ресурсов  в  описании
     юнита теперь выравниваются по правой стороне
 
 2010-10-14 02:20
-[#] Добавлены сведения о копирайте на все страницы (через overal_footer.tpl)
+[~] Добавлены сведения о копирайте на все страницы (через overal_footer.tpl)
 [@]    Перераспределены    функции    в    файлах    /includes/unlocalized.php,
     /includes/functions.php, /includes/functions/sys_template.php между файлами
     /includes/functions.php и /includes/template.php
@@ -1987,7 +1986,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     индивидуальных файлов в /includes/functions.php
 
 2010-10-14 01:57
-[#] Строительство/Здания: Изменен цвет рамки превьюшки юнита
+[~] Строительство/Здания: Изменен цвет рамки превьюшки юнита
 [@] Строительство/Здания: Для рамки  выделения  превьюшки  теперь  используются
     стили из  CSS.  Добавлены  цвета  для  встроенных  стилей.  См.,  например,
     /skins/EpicBlue/formatte.css, стиль ".unit_preview"
@@ -1998,7 +1997,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     вместе с содержимым уничтожен
 
 2010-10-14 00:30
-[#] Флоты: Немного изменен попап с описанием флотов. Добавлено общее количество
+[~] Флоты: Немного изменен попап с описанием флотов. Добавлено общее количество
     ресурсов, которое везет флот
 [~] Небольшое редактирование описания зданий и их названий
 
@@ -2015,7 +2014,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [@] Исправленв ошибка отображения ошибки на странице ошибок администратора
 
 2010-10-13 10:21
-[#] Немного изменен порядок зданий на странице  постройки.  Теперь  все  здания
+[~] Немного изменен порядок зданий на странице  постройки.  Теперь  все  здания
     сгруппированы по типам: первая  линейка  -  добывающие,  вторая  линейка  -
     производящие, третья линейка - склады. На луне и/или при не всех  доступных
     для постройки зданиях порядок пока может меняться
@@ -2030,7 +2029,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [@] Небольшие изменения для подготовки ко включению профилирования SQL-запросов
 
 2010-10-13 04:50
-[#] Строительство/Здания: Переверстан блок информации о здании.  Новая  верстка
+[~] Строительство/Здания: Переверстан блок информации о здании.  Новая  верстка
     более статична. Кроме того, устранена проблема из старой  верстки:  слишком
     широкая таблица требуемых ресурсов (например,  когда  количество  какого-то
     ресурса превышала сотню миллионов) сбивала описание
@@ -2039,10 +2038,10 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     поля. Это дает возможность легко изменять верстку этого блока
 
 2010-10-13 02:19
-[#] Симулятор: добавлены кнопки "0" и "макс" для автозаполнения поля  значением
+[~] Симулятор: добавлены кнопки "0" и "макс" для автозаполнения поля  значением
     флота с текущей планеты/технологии текущего игрока. Так же добавлены кнопки
     массового заполнения всех полей соответствующего типа
-[#] Симулятор:  Теперь  нормально  работает  табуляция:  кнопки  "0"  и  "макс"
+[~] Симулятор:  Теперь  нормально  работает  табуляция:  кнопки  "0"  и  "макс"
     исключены из очереди табуляции, а поля со  значениями  проходятся  в  более
     логичном  порядке  -  сначала  все  поля  атакующего,  затем  -  все   поля
     оброняющегося
@@ -2078,10 +2077,10 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 [+] В левое меню в раздел "Информация" добавилась ссылка  "Мировые  константы",
     ведущая на страницу с перечнем настроек Вселенной
 [~] Максимальное количество колоний у игрока по умолчанию увеличено до 9
-[#] Доработан новый интерфейс строительства зданий
-[#] Добавлено время строительства к превьюшке на новой  странице  строительства
+[~] Доработан новый интерфейс строительства зданий
+[~] Добавлено время строительства к превьюшке на новой  странице  строительства
     зданий
-[#] Баланс ресурсов на  превьюшке  теперь  показывается  с  учетом  ресурсах  в
+[~] Баланс ресурсов на  превьюшке  теперь  показывается  с  учетом  ресурсах  в
     прибывающих собственных флотах
 [@] На админскую страницу  настройки  сервера  добавлена  возможность  изменять
     следующие параметры: режим игры (Сверхновая или оГейм); количество галактик
@@ -2104,11 +2103,11 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
    "Резервное копирование"
 
 2010-10-08 17:06
-[#] Текущая дата-время и количество игроков  онлайн  перекочевали  со  страницы
+[~] Текущая дата-время и количество игроков  онлайн  перекочевали  со  страницы
     обзора планеты в верхнюю панель
-[#] Новости с "Обзора планеты" перенесены на страницу "Император"
-[#] Немного переработан "Обзор планеты"
-[#] Теперь если есть непрочитанная новость, в левом меню возле пункта "Новости"
+[~] Новости с "Обзора планеты" перенесены на страницу "Император"
+[~] Немного переработан "Обзор планеты"
+[~] Теперь если есть непрочитанная новость, в левом меню возле пункта "Новости"
     появляется статус "Обновленно"
 
 2010-10-08 12:34
@@ -2118,7 +2117,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     особых тугодумов - теперь МОЖНО уничтожить защитные купола  и  ПЗ.  Это  НЕ
     является изменением, а  лишь  исправление  ошибки,  когда  невозможно  было
     уничтожить атаками всю защиту до конца
-[#] Немного изменен новый экран постройки зданий
+[~] Немного изменен новый экран постройки зданий
 
 2010-10-04 01:43
 [!] Добавлена новая страница "Император" в левое  меню.  На  нее  вынесена  вся
@@ -2131,8 +2130,8 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
 
 2010-10-03 22:08
 [+] Черный рынок: добавились слайдеры на страницы продажи и покупки кораблей
-[#] "Биржа ресурсов" из левого меню переехала в "Черный рынок"
-[#] Переработана структура левого меню
+[~] "Биржа ресурсов" из левого меню переехала в "Черный рынок"
+[~] Переработана структура левого меню
 
 2010-10-01 23:16
 [+] В настройки пользователя временно  добавлена  возможность  включить  старый
@@ -2154,7 +2153,7 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     Соответствующим образом увеличено её энергопотребление
 
 2010-09-28 07:54
-[#] На картинки планет тултип на иконках исследований теперь показывает  время,
+[~] На картинки планет тултип на иконках исследований теперь показывает  время,
     оставшееся до конца исследования на момент обновления страницы
 
 2010-09-28 01:08
@@ -2170,13 +2169,13 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     уровня и только те, которые могут в одиночку исследовать данную технологию.
 
 2010-09-26 04:00
-[#] В  отчете  Симулятора  в  самом  низу  теперь  два  линка,  которыми  можно
+[~] В  отчете  Симулятора  в  самом  низу  теперь  два  линка,  которыми  можно
     поделится. Один сразу же запустить симуляцию с аналогичными параметрами,  а
     второй позволяет сначала отредактировать параметры.
 
 2010-09-25 23:46
-[#] Переделан внешний вид страницы логина
-[#] Переделан внешний вид страницы регистрации.  Так  же  добавлена  ссылка  на
+[~] Переделан внешний вид страницы логина
+[~] Переделан внешний вид страницы регистрации.  Так  же  добавлена  ссылка  на
     правила
 
 2010-09-25 02:53
@@ -2200,7 +2199,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     June 1991. Сама лицензия находится в файле docs/license.txt дистрибутива.
 [+] Добавлен новый корабль "Супертранспорт".  Его  описание,  характеристики  и
     требования для постройки можно посмотреть в игре
-[#] Размер иконки "Уничтожить" на странице строительства зданий уменьшен с  25%
+[~] Размер иконки "Уничтожить" на странице строительства зданий уменьшен с  25%
     до 15% от оригинального изображения
 [~] Множество мелких багфиксов, оптимизаций и исправлений
 
@@ -2208,32 +2207,32 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
 [%] Исправлено исчезновение некоторых надписей на странице "Обзор Империи"
 
 2010-09-13 20:01
-[#] Добавлена иконка предупреждения  о  летящем  вражеском  флоте  на  картинку
+[~] Добавлена иконка предупреждения  о  летящем  вражеском  флоте  на  картинку
     планеты на странице "Обзор Империи"
-[#] Добавлена название строющегося здания на странице "Обзор Империи"
-[#] На  картинке  планеты  на  страницах  "Обзор  Империи"  и  "Обзор  Планеты"
+[~] Добавлена название строющегося здания на странице "Обзор Империи"
+[~] На  картинке  планеты  на  страницах  "Обзор  Империи"  и  "Обзор  Планеты"
     добавлена иконка, сигнализирующая о летящем собственном флоте. Щелчок мышью
     на иконке переведет на страницу "Флот" соответствующей планеты
-[#] Если есть летящие свои флоты на  текущую  планету,  на  странице  постройки
+[~] Если есть летящие свои флоты на  текущую  планету,  на  странице  постройки
     зданий под описанием здания появляется строка "С учетом летящих флотов:". В
     ней содержатся те же расчеты, что  и  в  строке  "Останется  ресурсов",  но
     (СЮРПРИЗ!!!) с учетом ресурсов на летящих собственных флотах
 
 2010-09-13 12:08
-[#] На  страницах  "Обзор  планеты"  и  "Обзор  империи"  подложил  под  иконки
+[~] На  страницах  "Обзор  планеты"  и  "Обзор  империи"  подложил  под  иконки
     строительства фон с 75% прозрачности - это  улучшает  видимость  иконок  на
     картинках очень светлых планет
 
 2010-09-13 11:55
-[#] На странице выбора кораблей (ссылка "Флоты") в  "Текущие  параметры  флота"
+[~] На странице выбора кораблей (ссылка "Флоты") в  "Текущие  параметры  флота"
     добавлено общее количество ресурсов на планете
 
 2010-09-13 08:28
-[#] По многочисленным просьбам игроков добавлено время прибытия  и  возвращения
+[~] По многочисленным просьбам игроков добавлено время прибытия  и  возвращения
     на страницу выбора цели полета при отправке флота
 
 2010-09-12 13:06
-[#] По  многочисленным  просьбам  игроков  добавлены  кнопки  "-"  и   "+"   к
+[~] По  многочисленным  просьбам  игроков  добавлены  кнопки  "-"  и   "+"   к
     метаэлементу ввода числовых значений
 
 2010-09-12 12:07
@@ -2241,12 +2240,12 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     достижении переработчиками поля обломков.
 
 2010-09-10 23:25
-[#] Теперь  на  страницах  "Обзор  планеты"  и  "Империя"  над  всеми  иконками
+[~] Теперь  на  страницах  "Обзор  планеты"  и  "Империя"  над  всеми  иконками
     строительства всплывает тултип с текущим объектом строительства
 [@] Теперь на страницах "Обзор планеты" и "Империя"  можно  кликать  на  иконки
     строительства. Клик перебросит на соотвутствующую страницу строительства на
     указанной планете
-[#] На странице "Империя" под изображением планеты  добавился  таймер  текущего
+[~] На странице "Империя" под изображением планеты  добавился  таймер  текущего
     строящегося здания (если таковое есть)
 
 2010-09-10 22:48
@@ -2301,14 +2300,14 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     странице "Ресурсы"
 
 2010-09-07 02:14
-[#] Обзор планеты: Переделан внешний вид индикатора застройки
-[#] Обзор  планеты:  Иконка  атаки  на  изображениях  луны  и  планеты  теперь
+[~] Обзор планеты: Переделан внешний вид индикатора застройки
+[~] Обзор  планеты:  Иконка  атаки  на  изображениях  луны  и  планеты  теперь
     click-through. Это означает, что при  выборе  планеты/луны  можно  спокойно
     кликать на иконку атаки, а не выцеливать место для клика, как раньше
-[#] Обзор   планеты:   Строка   с   названием   планеты    и    ссылкой    на
+[~] Обзор   планеты:   Строка   с   названием   планеты    и    ссылкой    на
     переименование/уничтожение планеты переехала  под  График  движения  флотов
     (сразу над расписанием строительств)
-[#] Обзор планеты: Объединил вместе строки "Время" и "Игроки on-line", а так же
+[~] Обзор планеты: Объединил вместе строки "Время" и "Игроки on-line", а так же
     вынес её поверх уведомлений о новых сообщениях и получении ТМ
 [%] Обзор планеты: Исправил баг с индикатором застройки  на  изображении  луны.
     Раньше показывался индикатор планеты, а не луны
@@ -2337,7 +2336,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     A: Ракетная атака в графике движения указывает планету назначения. При этом
        если выбрать планету, с которой её отправили, ракетная атака  перекочует
        в верхний список.
-[#] Переделал верхнюю панель -  избавился  от  встроенного  кода  в  темплейте,
+[~] Переделал верхнюю панель -  избавился  от  встроенного  кода  в  темплейте,
     перевел счетчик ресурсов на sn_timer.js
 [~] Перевел календарь на  странице  Обзор  планеты  на  sn_timer.js.  Полностью
     избавился от файла timer.js
@@ -2585,13 +2584,12 @@ Project "SuperNova.WS" Release 1
 [~] Движок: Написана  с  нуля  библиотека  таймеров  js/sn_timer.js.  Формат  и
     примеры использования - см. в файле библиотеки
 [~] Другие изменения в движке
-
-[#] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
+[~] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
-[#] Интерфейс/Верфи:  На  странице  видны  боевые  данные  кораблей  и  обороны
+[~] Интерфейс/Верфи:  На  странице  видны  боевые  данные  кораблей  и  обороны
     (броня/щиты/оружие)
-[#] Интерфейс/Меню: добавлен пункт меню "Закладки"
-[#] Интерфейс/Ресурсы:  оптимизирована  страница;   убрана   ненужная   строка
+[~] Интерфейс/Меню: добавлен пункт меню "Закладки"
+[~] Интерфейс/Ресурсы:  оптимизирована  страница;   убрана   ненужная   строка
     заполненности  хранилищ  (их  всегда  видно  в  верхней  строке   статуса);
     добавлена возможность изменить производство сразу для всех заводов
 
