misc-INT+DOC-33a18.2: Click on friendly flying fleet icon now transfers to Flying Fleets page. Todo.txt replaced with todo.xls

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -206,6 +206,10 @@
 [~] Наемники:   При  найме  постоянных  наемников  показывается  ровно  столько
     уровней, на сколько хватает ТМ
 [~] Альянсы: Изменено отображение логотипа на странице Альянса
+[~] Исследования: Награда за квесты на исследование теперь  всегда  начисляется
+    на основную планету игрока
+[~] Список планет: Клик на иконке  летящего  союзного  флота  теперь  открывает
+    сраницу "Флоты в полете"
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
@@ -216,6 +220,7 @@
 [%] Альянсы: Исправлена ошибка с неправильным отображением звания главы Альянса
 [%] Регистрация: Исправлена ошибка, когда игрок мог создать  аккаунт/планету  с
     пробелами в начале/в конце
+[%] Админка: Исправлена ошибка создания квеста
 [%] Ракетная атака: Исправлена ошибка, из-за которой ракеты били в  десять  раз
     слабее
 
@@ -240,6 +245,7 @@
 [@] Исследования: Исследования теперь завернуты в  транзакции  -  это  позволит
     избежать  злоупотреблений  связанных  с  частым  обновлением  страницы   на
     медленных соединениях
+[@] Файл todo.txt заменен на todo.xls
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
