misc-NWS-33a20.1: Changed how behave admin news module on news editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,8 +8,8 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a20
-~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a20.1
+~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Альянсы:   Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
@@ -251,6 +251,12 @@
     избежать  злоупотреблений  связанных  с  частым  обновлением  страницы   на
     медленных соединениях
 [@] Файл todo.txt заменен на todo.xls
+[@] Новости: Изменения в редактировании новости
+    При редактировании новости галочка рассылки новости по умолчанию отключена
+    При  редактировании  новости  не  изменяется  глобальное  время   написания
+    последней новости -  т.е.  отредактированная  новость  не  включает  список
+    последних новостей на обзоре планеты
+[@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
