misc-SYS-31a20.2: SN now oficially incompatible with PHP 5.3.1. Fixed topbar disappearence in PHP 5.3.x

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,6 +11,15 @@
 Текущая версия 33a20.1
 ~~~~~~~~~~~~~~~~~~~~~~
 
+[!] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной полноценную
+    работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
+    версии PHP или используйте предыдущую версию СН.
+    Описание бага: https://bugs.php.net/bug.php?id=50394
+[@] Среда разработки изменена на WAMP Server 2.2. Конфигурация:
+    MySQL 5.1.41
+    Apache 2.2
+    PHP 5.2.9-2 + xCache 1.3.2
+
 [#] Альянсы:   Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
     1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтрий/ТМ
