--- a/docs/install.txt
+++ b/docs/install.txt
@@ -43,9 +43,17 @@ XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
                   будут работать некоторые фишки и заметно возрастет нагрузка
                   на MySQL.
 
-Движок разрабатывается под Windows + Apache Friends XAMPP Lite (Basis  Package)
-version 1.7.3 (включен только Apache+PHP+XCache и MySQL). Продакшн крутится под
-CentOS + lighttpd + XCache.
+ВНИМАНИЕ!!! PHP 5.3.1 содержит  баг,  который  делает  невозможной  полноценную
+работу СН начиная с v33a12! Обновите PHP, сделайте откат до более ранней версии
+PHP или используйте предыдущую версию СН.
+Ссылка для чтения: https://bugs.php.net/bug.php?id=50394
+
+Движок разрабатывается под Windows на WAMP Server 2.2. Конфигурация:
+  MySQL 5.1.41
+  Apache 2.2
+  PHP 5.2.9-2 + xCache 1.3.2
+Продакшн крутится под CentOS + lighttpd + xCache
+
 На localhost движок ВСЕГДА работает в режиме display_errors=1
 
 
