feat-ALI-31a21: [Module Support] Allie's research que on info page for members

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,8 +8,8 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a20.1
-~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a21
+~~~~~~~~~~~~~~~~~~~~
 
 [!] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной полноценную
     работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
@@ -47,7 +47,8 @@
        строить Тяжелый Лазер (требуется ЛТ 6-го уровня). Очевидно, если  бы  он
        не находился в Альянсе, эти постройки были бы заблокированы
     9. При исследовании технологии уровень лаборатории равен количеству игроков
-       в Альянсе на момент начала исследования
+       в Альянсе на момент начала  исследования.  Активные  исследования  видны
+       членам Альянса на странице информации
     Примеры:
       1. Альянс  из 10 человек купил Технологию 4 уровня. Бонус = round(4/10) =
          round(0,4) = 0
